--- a/styles.css
+++ b/styles.css
@@ -50,13 +50,13 @@ li {
     font-size: 20px;
 }
 
-#search-box {
+.search-box {
   margin:0px;
 	display: inline-block;
 	width: 80%;
 }
 
-#search-box button {
+.search-box button {
   color: white;
   border-radius: 3px;
   background-color: #337ab7; 
